--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "better-scroll": "^2.3.1",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
     "vue": "^2.6.11",
