--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-travel-app",
+  "name": "travel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "better-scroll": "^2.3.1",
+    "axios": "^0.21.1",
+    "better-scroll": "^2.4.1",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
     "vue": "^2.6.11",
